--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,3 +93,87 @@ img {
     color: var(--title-color);
     cursor: pointer;
 }
+/*NAVIGATION FOR MOBILE DEVICES */
+@media screen and (max-width: 1023px) {
+    .nav__menu {
+        position: fixed;
+        top: -100%;
+        background-color: var(--body-color);
+        width: 100%;
+        box-shadow: 0 1px 16px hsla(210, 55%, 24%, .1);
+        padding-block: 3.5rem 2rem;
+        display: flex;
+        flex-direction: column;
+        row-gap: 2.5rem;
+        transition: top .4s;
+    }
+}
+
+.nav__list {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    row-gap: 2rem;
+}
+
+.nav__link {
+    color: var(--title-color);
+    transition: color .3s;
+}
+
+.nav__link:hover {
+    color: var(--first-color);
+}
+.nav__buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: .75rem;
+}
+
+.nav__button-link, .nav__button-ghost {
+    display: inline-block;
+    color: var(--title-color);
+}
+
+.nav__button-ghost {
+    background-color: hsla(0, 0%, 100%, .3);
+    padding: 1rem 2.5rem;
+    border: 2px solid var(--title-color);
+    border-radius: .75rem;
+}
+
+.nav__close {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+}
+
+/*show menu */
+.show-menu {
+    top: 0;
+}
+
+/*HOME*/
+.home{
+    position: relative;
+}
+
+.home__container {
+    padding-top: 8rem;
+    height: 100vh;
+}
+
+.home__content {
+    position: relative;
+    z-index: 2;
+}
+
+.home__data {
+    display: grid;
+    row-gap: .5rem;
+}
+
+.home__subtitle {
+    
+}
